# vxpm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  PUBLISHING.md  README.md  REVIEW_FINDINGS.md
.github/workflows/: release.yml
src/: app.rs  build.rs  cli.rs  config.rs  dep_graph.rs  gcc.rs  git.rs  main.rs  package.rs  repo.rs  shlibs.rs  template.rs  ui.rs  version_check.rs
